--- a/popularity_corner/anciens_films.ipynb
+++ b/popularity_corner/anciens_films.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "(8465, 15)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "[7939 rows x 14 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,11 +599,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = '7de52660cd21bc098732e69e0d02651c'\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "api_key = os.getenv('API_KEY_BUDGET')\n",
     "\n",
     "for index, row in df.iterrows():\n",
     "    title = row['title']\n",
@@ -613,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
