correction fonction saison

--- a/popularity_corner/analyse_df_meteo.ipynb
+++ b/popularity_corner/analyse_df_meteo.ipynb
@@ -179,24 +179,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "conditions = [\n",
-    "    (df['release_date'].dt.month >= 3) & (df['release_date'].dt.month <= 5),  # Printemps (mars, avril, mai)\n",
-    "    (df['release_date'].dt.month >= 6) & (df['release_date'].dt.month <= 8),  # Été (juin, juillet, août)\n",
-    "    (df['release_date'].dt.month >= 9) & (df['release_date'].dt.month <= 11),  # Automne (septembre, octobre, novembre)\n",
-    "    (df['release_date'].dt.month == 12) | (df['release_date'].dt.month <= 2)   # Hiver (décembre, janvier, février)\n",
-    "]\n",
-    "\n",
-    "# Définir les valeurs correspondantes à chaque saison\n",
-    "seasons = ['Printemps', 'Été', 'Automne', 'Hiver']\n",
-    "\n",
-    "# Appliquer les conditions pour créer la colonne 'saison'\n",
-    "df['saison'] = pd.Series(np.select(conditions, seasons))"
+    "def get_season(release_date):\n",
+    "    month = release_date.month\n",
+    "    if month >=3 and month <= 5:\n",
+    "        return \"Spring\"\n",
+    "    elif month >=6 and month <= 8:\n",
+    "        return \"Summer\"\n",
+    "    elif month >=9 and month <= 11:\n",
+    "        return \"Autumn\"\n",
+    "    else : \n",
+    "        return \"Winter\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['release_date'] = pd.to_datetime(df['release_date'])\n",
+    "df['season'] = df['release_date'].apply(get_season)"
    ]
   },
   {
