feature engineering distributor

--- a/popularity_corner/analyse_df_meteo.ipynb
+++ b/popularity_corner/analyse_df_meteo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "(5935, 20)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,11 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['distributor'] = df['distributor'].str.replace('/', ',').str.split(',')"
+    "df['distributor'] = df['distributor'].str.replace('/', ',')"
    ]
   },
   {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
@@ -409,43 +409,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>[Metropolitan FilmExport]</th>\n",
+       "      <th>Metropolitan FilmExport</th>\n",
        "      <td>258</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>[Universal Pictures International France]</th>\n",
+       "      <th>Universal Pictures International France</th>\n",
        "      <td>243</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>[Warner Bros. France]</th>\n",
+       "      <th>Warner Bros. France</th>\n",
        "      <td>184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>[Le Pacte]</th>\n",
+       "      <th>Le Pacte</th>\n",
        "      <td>179</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>[Twentieth Century Fox France]</th>\n",
+       "      <th>Twentieth Century Fox France</th>\n",
        "      <td>165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>[StudioCanal]</th>\n",
+       "      <th>StudioCanal</th>\n",
        "      <td>161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>[Pyramide Distribution]</th>\n",
+       "      <th>Pyramide Distribution</th>\n",
        "      <td>157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>[Pathé]</th>\n",
+       "      <th>Pathé</th>\n",
        "      <td>154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>[Sony Pictures Releasing France]</th>\n",
+       "      <th>Sony Pictures Releasing France</th>\n",
        "      <td>154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>[Mars Films]</th>\n",
+       "      <th>Mars Films</th>\n",
        "      <td>149</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -453,20 +453,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                                           distributor\n",
-       "[Metropolitan FilmExport]                          258\n",
-       "[Universal Pictures International France]          243\n",
-       "[Warner Bros. France]                              184\n",
-       "[Le Pacte]                                         179\n",
-       "[Twentieth Century Fox France]                     165\n",
-       "[StudioCanal]                                      161\n",
-       "[Pyramide Distribution]                            157\n",
-       "[Pathé]                                            154\n",
-       "[Sony Pictures Releasing France]                   154\n",
-       "[Mars Films]                                       149"
+       "                                         distributor\n",
+       "Metropolitan FilmExport                          258\n",
+       "Universal Pictures International France          243\n",
+       "Warner Bros. France                              184\n",
+       "Le Pacte                                         179\n",
+       "Twentieth Century Fox France                     165\n",
+       "StudioCanal                                      161\n",
+       "Pyramide Distribution                            157\n",
+       "Pathé                                            154\n",
+       "Sony Pictures Releasing France                   154\n",
+       "Mars Films                                       149"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 370,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
