--- a/popularity_corner/feature_engineering.ipynb
+++ b/popularity_corner/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,23 +162,84 @@
     "    else:\n",
     "        return distributor_freq_dict[distributors]\n",
     "\n",
-    "df_cleaned['distributor_avg_frequency'] = df_cleaned['distributor'].apply(calculate_avg_frequency)\n",
-    "\n",
-    "\n"
+    "df_cleaned['distributor_avg_frequency'] = df_cleaned['distributor'].apply(calculate_avg_frequency)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_model = df_cleaned[['genre','duration','nationality','box_office_first_week','press_eval','viewers_eval','views','budget','Temperature Moyenne','Lille','Bordeaux','Lyon','Paris','season','is_holiday','proportion_stars_actors','proportion_stars_producers','proportion_stars_director','distributor_avg_frequency']]"
+    "# Convertir toutes les valeurs de la colonne \"genre\" en minuscules et supprimer les espaces en début et en fin\n",
+    "df_cleaned['genre'] = df_cleaned['genre'].str.lower().str.strip()\n",
+    "\n",
+    "# Supprimer les espaces entre les genres\n",
+    "df_cleaned['genre'] = df_cleaned['genre'].str.replace(', ', ',')\n",
+    "\n",
+    "# Encodage du genre\n",
+    "genre_encoding = df_cleaned['genre'].str.get_dummies(sep=',')\n",
+    "genre_encoding.columns = ['genre_' + col for col in genre_encoding.columns]\n",
+    "\n",
+    "# Concaténation des DataFrames d'encodage avec le DataFrame principal\n",
+    "df_cleaned = pd.concat([df_cleaned, genre_encoding], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['title', 'release_date', 'genre', 'duration', 'director', 'producers',\n",
+       "       'cast', 'nationality', 'distributor', 'box_office_first_week',\n",
+       "       'press_eval', 'viewers_eval', 'views', 'budget', 'Temperature Moyenne',\n",
+       "       'Lille', 'Bordeaux', 'Lyon', 'Paris', 'season', 'year', 'is_holiday',\n",
+       "       'proportion_stars_actors', 'proportion_stars_producers',\n",
+       "       'proportion_stars_director', 'distributor_avg_frequency',\n",
+       "       'genre_action', 'genre_animation', 'genre_arts martiaux',\n",
+       "       'genre_aventure', 'genre_biopic', 'genre_bollywood', 'genre_comédie',\n",
+       "       'genre_comédie dramatique', 'genre_comédie musicale', 'genre_divers',\n",
+       "       'genre_drame', 'genre_epouvante-horreur', 'genre_erotique',\n",
+       "       'genre_espionnage', 'genre_expérimental', 'genre_famille',\n",
+       "       'genre_fantastique', 'genre_guerre', 'genre_historique',\n",
+       "       'genre_judiciaire', 'genre_musical', 'genre_policier', 'genre_péplum',\n",
+       "       'genre_romance', 'genre_science fiction', 'genre_sport event',\n",
+       "       'genre_thriller', 'genre_western'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cleaned.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_model = df_cleaned[['genre','duration','nationality','box_office_first_week','press_eval','viewers_eval','views','budget','Temperature Moyenne','Lille','Bordeaux','Lyon','Paris','season','is_holiday','proportion_stars_actors','proportion_stars_producers','proportion_stars_director','distributor_avg_frequency','genre_action', 'genre_animation', 'genre_arts martiaux',\n",
+    "       'genre_aventure', 'genre_biopic', 'genre_bollywood', 'genre_comédie',\n",
+    "       'genre_comédie dramatique', 'genre_comédie musicale', 'genre_divers',\n",
+    "       'genre_drame', 'genre_epouvante-horreur', 'genre_erotique',\n",
+    "       'genre_espionnage', 'genre_expérimental', 'genre_famille',\n",
+    "       'genre_fantastique', 'genre_guerre', 'genre_historique',\n",
+    "       'genre_judiciaire', 'genre_musical', 'genre_policier', 'genre_péplum',\n",
+    "       'genre_romance', 'genre_science fiction', 'genre_sport event',\n",
+    "       'genre_thriller', 'genre_western']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
