--- a/popularity_corner/analyse_df_meteo.ipynb
+++ b/popularity_corner/analyse_df_meteo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "(5935, 20)"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 409,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 427,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nationality_counts = df['nationality'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 428,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rare_nationalities = nationality_counts[nationality_counts < 5].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 429,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['nationality'].isin(rare_nationalities), 'nationality'] = 'Autres'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 430,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +493,7 @@
        "Mars Films                                       149"
       ]
      },
-     "execution_count": 370,
+     "execution_count": 430,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [],
    "source": [
