--- a/popularity_corner/best_model/modelisation_sans_meteo_extratree.ipynb
+++ b/popularity_corner/best_model/modelisation_sans_meteo_extratree.ipynb
@@ -138,7 +138,43 @@
       "[I 2023-07-31 13:15:30,183] Trial 69 finished with value: 0.6919655523630037 and parameters: {'n_estimators': 200, 'criterion': 'absolute_error', 'max_depth': 15, 'min_samples_split': 11, 'min_samples_leaf': 3, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
       "[I 2023-07-31 13:15:30,807] Trial 70 finished with value: 0.48803223774268 and parameters: {'n_estimators': 200, 'criterion': 'friedman_mse', 'max_depth': 14, 'min_samples_split': 3, 'min_samples_leaf': 4, 'max_features': 'sqrt', 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
       "[I 2023-07-31 13:15:36,182] Trial 71 finished with value: 0.7374208090934109 and parameters: {'n_estimators': 300, 'criterion': 'squared_error', 'max_depth': 13, 'min_samples_split': 5, 'min_samples_leaf': 2, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
-      "[I 2023-07-31 13:26:40,552] Trial 72 finished with value: 0.7377111555487942 and parameters: {'n_estimators': 300, 'criterion': 'absolute_error', 'max_depth': 13, 'min_samples_split': 4, 'min_samples_leaf': 2, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n"
+      "[I 2023-07-31 13:26:40,552] Trial 72 finished with value: 0.7377111555487942 and parameters: {'n_estimators': 300, 'criterion': 'absolute_error', 'max_depth': 13, 'min_samples_split': 4, 'min_samples_leaf': 2, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 13:38:16,539] Trial 73 finished with value: 0.7337554083924961 and parameters: {'n_estimators': 300, 'criterion': 'absolute_error', 'max_depth': 12, 'min_samples_split': 4, 'min_samples_leaf': 2, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 13:46:01,208] Trial 74 finished with value: 0.7150312936708896 and parameters: {'n_estimators': 200, 'criterion': 'absolute_error', 'max_depth': 13, 'min_samples_split': 7, 'min_samples_leaf': 3, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 13:57:47,141] Trial 75 finished with value: 0.7295639340678823 and parameters: {'n_estimators': 300, 'criterion': 'absolute_error', 'max_depth': 11, 'min_samples_split': 2, 'min_samples_leaf': 2, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:02:06,039] Trial 76 finished with value: 0.7310979133004083 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 14, 'min_samples_split': 6, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:06:45,068] Trial 77 finished with value: 0.6762775318662717 and parameters: {'n_estimators': 300, 'criterion': 'absolute_error', 'max_depth': 13, 'min_samples_split': 4, 'min_samples_leaf': 3, 'max_features': None, 'bootstrap': True}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:06:47,190] Trial 78 finished with value: 0.7251506736381328 and parameters: {'n_estimators': 100, 'criterion': 'poisson', 'max_depth': 14, 'min_samples_split': 6, 'min_samples_leaf': 2, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:06:53,184] Trial 79 finished with value: 0.7267431218600344 and parameters: {'n_estimators': 300, 'criterion': 'friedman_mse', 'max_depth': 13, 'min_samples_split': 5, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:06:56,982] Trial 80 finished with value: 0.7317834361260127 and parameters: {'n_estimators': 200, 'criterion': 'poisson', 'max_depth': 12, 'min_samples_split': 3, 'min_samples_leaf': 2, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:07:02,916] Trial 81 finished with value: 0.7374208090934109 and parameters: {'n_estimators': 300, 'criterion': 'squared_error', 'max_depth': 13, 'min_samples_split': 5, 'min_samples_leaf': 2, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:07:09,001] Trial 82 finished with value: 0.740619980332563 and parameters: {'n_estimators': 300, 'criterion': 'squared_error', 'max_depth': 13, 'min_samples_split': 4, 'min_samples_leaf': 2, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:07:14,907] Trial 83 finished with value: 0.740619980332563 and parameters: {'n_estimators': 300, 'criterion': 'squared_error', 'max_depth': 13, 'min_samples_split': 4, 'min_samples_leaf': 2, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:07:20,444] Trial 84 finished with value: 0.7263901479210406 and parameters: {'n_estimators': 300, 'criterion': 'squared_error', 'max_depth': 12, 'min_samples_split': 4, 'min_samples_leaf': 3, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:07:21,546] Trial 85 finished with value: 0.47137306469397544 and parameters: {'n_estimators': 300, 'criterion': 'poisson', 'max_depth': 14, 'min_samples_split': 3, 'min_samples_leaf': 2, 'max_features': 'log2', 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:11:39,307] Trial 86 finished with value: 0.7397848529634239 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 14, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:12:24,926] Trial 87 finished with value: 0.6074549270946368 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:16:41,922] Trial 88 finished with value: 0.7397848529634239 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 14, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:18:33,441] Trial 89 finished with value: 0.7162572477214153 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 14, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': True}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:21:29,229] Trial 90 finished with value: 0.4106504567713497 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 3, 'min_samples_split': 3, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:25:51,191] Trial 91 finished with value: 0.7267707930499254 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 14, 'min_samples_split': 4, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:30:07,930] Trial 92 finished with value: 0.7397848529634239 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 14, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 41 with value: 0.740619980332563.\n",
+      "[I 2023-07-31 14:34:27,943] Trial 93 finished with value: 0.7446695035824411 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 93 with value: 0.7446695035824411.\n",
+      "[I 2023-07-31 14:38:49,023] Trial 94 finished with value: 0.7446695035824411 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 93 with value: 0.7446695035824411.\n",
+      "[I 2023-07-31 14:43:09,608] Trial 95 finished with value: 0.7446695035824411 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 93 with value: 0.7446695035824411.\n",
+      "[I 2023-07-31 14:47:19,817] Trial 96 finished with value: 0.7446695035824411 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 93 with value: 0.7446695035824411.\n",
+      "[I 2023-07-31 14:51:17,998] Trial 97 finished with value: 0.7446695035824411 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 93 with value: 0.7446695035824411.\n",
+      "[I 2023-07-31 14:55:15,441] Trial 98 finished with value: 0.7446695035824411 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 93 with value: 0.7446695035824411.\n",
+      "[I 2023-07-31 14:59:19,326] Trial 99 finished with value: 0.7443114365582022 and parameters: {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 15, 'min_samples_split': 3, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}. Best is trial 93 with value: 0.7446695035824411.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Meilleurs hyperparamètres trouvés : {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}\n",
+      "R2 Score sur les données de test : 0.734064323748832\n",
+      "174232.93824056655\n"
      ]
     }
    ],
@@ -239,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +292,7 @@
     "\n",
     "# Définir les paramètres du préprocesseur\n",
     "numerical_features = ['duration', 'views', 'budget','proportion_stars_actors', 'proportion_stars_producers', 'proportion_stars_director', 'distributor_avg_frequency']\n",
-    "categorical_features = ['nationality', 'season', 'is_holiday']\n",
+    "categorical_features = ['nationality', 'season']\n",
     "\n",
     "numerical_transformer = StandardScaler()\n",
     "categorical_transformer = OneHotEncoder()\n",
@@ -269,7 +305,7 @@
     "    remainder=\"passthrough\"\n",
     ")\n",
     "\n",
-    "best_params = {'n_estimators': 100, 'criterion': 'squared_error', 'max_depth': 10, 'min_samples_split': 3, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}\n",
+    "best_params = {'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False}\n",
     "# Créer le modèle avec les meilleurs hyperparamètres\n",
     "model = ExtraTreesRegressor(\n",
     "    n_estimators=best_params['n_estimators'],\n",
@@ -278,7 +314,8 @@
     "    min_samples_split=best_params['min_samples_split'],\n",
     "    min_samples_leaf=best_params['min_samples_leaf'],\n",
     "    max_features=best_params['max_features'],\n",
-    "    bootstrap=best_params['bootstrap']\n",
+    "    bootstrap=best_params['bootstrap'],\n",
+    "    random_state=42\n",
     ")\n",
     "\n",
     "pipe = Pipeline([\n",
@@ -290,19 +327,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7446695035824411"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe.fit(X_train,y_train)\n",
+    "pipe.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023/07/31 12:23:02 INFO mlflow.tracking.fluent: Experiment with name 'cinema' does not exist. Creating a new experiment.\n",
-      "2023/07/31 12:23:07 WARNING mlflow.utils.environment: Encountered an unexpected error while inferring pip requirements (model URI: /tmp/tmp1_1jbc_4/model/model.pkl, flavor: sklearn), fall back to return ['scikit-learn==1.3.0', 'cloudpickle==2.2.1']. Set logging level to DEBUG to see the full traceback.\n",
-      "/home/apprenant/miniconda3/envs/machine-learning/lib/python3.10/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
-      "2023/07/31 12:23:08 INFO mlflow.models.evaluation.base: Evaluating the model with the default evaluator.\n",
-      "2023/07/31 12:23:08 WARNING mlflow.models.evaluation.default_evaluator: Skip logging model explainability insights because the shap explainer None requires all feature values to be numeric, and each feature column must only contain scalar values.\n"
+      "2023/07/31 15:20:11 WARNING mlflow.utils.environment: Encountered an unexpected error while inferring pip requirements (model URI: /tmp/tmpyixfko65/model/model.pkl, flavor: sklearn), fall back to return ['scikit-learn==1.3.0', 'cloudpickle==2.2.1']. Set logging level to DEBUG to see the full traceback.\n",
+      "2023/07/31 15:20:11 INFO mlflow.models.evaluation.base: Evaluating the model with the default evaluator.\n",
+      "2023/07/31 15:20:11 WARNING mlflow.models.evaluation.default_evaluator: Skip logging model explainability insights because the shap explainer None requires all feature values to be numeric, and each feature column must only contain scalar values.\n"
      ]
     }
    ],
@@ -324,9 +379,7 @@
     "    model_uri = mlflow.get_artifact_uri(run_name)\n",
     "\n",
     "    # Log des paramètres\n",
-    "    mlflow.log_params({'n_estimators': 100,'criterion': 'squared_error','max_depth': 14, 'min_samples_split': 3,'min_samples_leaf': 3,\n",
-    "    'max_features': None,\n",
-    "    'bootstrap': False})\n",
+    "    mlflow.log_params({'n_estimators': 100, 'criterion': 'absolute_error', 'max_depth': 15, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': None, 'bootstrap': False})\n",
     "    \n",
     "    \n",
     "    # Log des Tags\n",
@@ -351,9 +404,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feature</th>\n",
+       "      <th>Importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>num__budget</td>\n",
+       "      <td>2.085739e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>num__views</td>\n",
+       "      <td>1.606565e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>num__distributor_avg_frequency</td>\n",
+       "      <td>1.074951e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>num__proportion_stars_actors</td>\n",
+       "      <td>9.934054e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>num__duration</td>\n",
+       "      <td>5.765914e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>cat__nationality_Serbie</td>\n",
+       "      <td>9.374756e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>cat__nationality_Thaïlande</td>\n",
+       "      <td>4.546291e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>remainder__genre_divers</td>\n",
+       "      <td>3.733472e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>cat__nationality_kazakhstan</td>\n",
+       "      <td>2.437424e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>remainder__genre_expérimental</td>\n",
+       "      <td>1.392994e-08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>102 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Feature    Importance\n",
+       "2                      num__budget  2.085739e-01\n",
+       "1                       num__views  1.606565e-01\n",
+       "6   num__distributor_avg_frequency  1.074951e-01\n",
+       "3     num__proportion_stars_actors  9.934054e-02\n",
+       "0                    num__duration  5.765914e-02\n",
+       "..                             ...           ...\n",
+       "57         cat__nationality_Serbie  9.374756e-07\n",
+       "63      cat__nationality_Thaïlande  4.546291e-07\n",
+       "83         remainder__genre_divers  3.733472e-07\n",
+       "69     cat__nationality_kazakhstan  2.437424e-07\n",
+       "88   remainder__genre_expérimental  1.392994e-08\n",
+       "\n",
+       "[102 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "feature_importance = pipe.named_steps['model'].feature_importances_\n",
     "\n",
