--- a/popularity_corner/best_model/feature_engineerin_sans_meteo2.ipynb
+++ b/popularity_corner/best_model/feature_engineerin_sans_meteo2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,18 +119,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cleaned['proportion_stars_actors'] = df_cleaned['cast'].apply(count_stars)\n",
+    "df_cleaned['stars_actors'] = df_cleaned['cast'].apply(count_stars)\n",
     "df_cleaned['proportion_stars_producers'] = df_cleaned['producers'].apply(count_stars)\n",
-    "df_cleaned['proportion_stars_director'] = df_cleaned['director'].apply(count_stars)"
+    "df_cleaned['proportion_stars_director'] = df_cleaned['director'].apply(count_stars)\n",
+    "df_cleaned['stars_producers_director'] = df_cleaned['proportion_stars_producers'] + df_cleaned['proportion_stars_director']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -192,21 +193,22 @@
        "Index(['title', 'release_date', 'genre', 'duration', 'director', 'producers',\n",
        "       'cast', 'nationality', 'distributor', 'box_office_first_week',\n",
        "       'press_eval', 'viewers_eval', 'views', 'budget', 'season', 'year',\n",
-       "       'is_holiday', 'proportion_stars_actors', 'proportion_stars_producers',\n",
-       "       'proportion_stars_director', 'distributor_avg_frequency',\n",
-       "       'genre_action', 'genre_animation', 'genre_arts martiaux',\n",
-       "       'genre_aventure', 'genre_biopic', 'genre_bollywood', 'genre_comédie',\n",
-       "       'genre_comédie dramatique', 'genre_comédie musicale', 'genre_divers',\n",
-       "       'genre_drame', 'genre_epouvante-horreur', 'genre_erotique',\n",
-       "       'genre_espionnage', 'genre_expérimental', 'genre_famille',\n",
-       "       'genre_fantastique', 'genre_guerre', 'genre_historique',\n",
-       "       'genre_judiciaire', 'genre_musical', 'genre_policier', 'genre_péplum',\n",
-       "       'genre_romance', 'genre_science fiction', 'genre_sport event',\n",
-       "       'genre_thriller', 'genre_western'],\n",
+       "       'is_holiday', 'stars_actors', 'proportion_stars_producers',\n",
+       "       'proportion_stars_director', 'stars_producers_director',\n",
+       "       'distributor_avg_frequency', 'genre_action', 'genre_animation',\n",
+       "       'genre_arts martiaux', 'genre_aventure', 'genre_biopic',\n",
+       "       'genre_bollywood', 'genre_comédie', 'genre_comédie dramatique',\n",
+       "       'genre_comédie musicale', 'genre_divers', 'genre_drame',\n",
+       "       'genre_epouvante-horreur', 'genre_erotique', 'genre_espionnage',\n",
+       "       'genre_expérimental', 'genre_famille', 'genre_fantastique',\n",
+       "       'genre_guerre', 'genre_historique', 'genre_judiciaire', 'genre_musical',\n",
+       "       'genre_policier', 'genre_péplum', 'genre_romance',\n",
+       "       'genre_science fiction', 'genre_sport event', 'genre_thriller',\n",
+       "       'genre_western'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +228,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 5611 entries, 0 to 7518\n",
-      "Data columns (total 49 columns):\n",
+      "Data columns (total 50 columns):\n",
       " #   Column                      Non-Null Count  Dtype         \n",
       "---  ------                      --------------  -----         \n",
       " 0   title                       5611 non-null   object        \n",
@@ -246,39 +248,40 @@
       " 14  season                      5611 non-null   object        \n",
       " 15  year                        5611 non-null   int64         \n",
       " 16  is_holiday                  5611 non-null   bool          \n",
-      " 17  proportion_stars_actors     5611 non-null   int64         \n",
+      " 17  stars_actors                5611 non-null   int64         \n",
       " 18  proportion_stars_producers  5611 non-null   int64         \n",
       " 19  proportion_stars_director   5611 non-null   int64         \n",
-      " 20  distributor_avg_frequency   5611 non-null   float64       \n",
-      " 21  genre_action                5611 non-null   int64         \n",
-      " 22  genre_animation             5611 non-null   int64         \n",
-      " 23  genre_arts martiaux         5611 non-null   int64         \n",
-      " 24  genre_aventure              5611 non-null   int64         \n",
-      " 25  genre_biopic                5611 non-null   int64         \n",
-      " 26  genre_bollywood             5611 non-null   int64         \n",
-      " 27  genre_comédie               5611 non-null   int64         \n",
-      " 28  genre_comédie dramatique    5611 non-null   int64         \n",
-      " 29  genre_comédie musicale      5611 non-null   int64         \n",
-      " 30  genre_divers                5611 non-null   int64         \n",
-      " 31  genre_drame                 5611 non-null   int64         \n",
-      " 32  genre_epouvante-horreur     5611 non-null   int64         \n",
-      " 33  genre_erotique              5611 non-null   int64         \n",
-      " 34  genre_espionnage            5611 non-null   int64         \n",
-      " 35  genre_expérimental          5611 non-null   int64         \n",
-      " 36  genre_famille               5611 non-null   int64         \n",
-      " 37  genre_fantastique           5611 non-null   int64         \n",
-      " 38  genre_guerre                5611 non-null   int64         \n",
-      " 39  genre_historique            5611 non-null   int64         \n",
-      " 40  genre_judiciaire            5611 non-null   int64         \n",
-      " 41  genre_musical               5611 non-null   int64         \n",
-      " 42  genre_policier              5611 non-null   int64         \n",
-      " 43  genre_péplum                5611 non-null   int64         \n",
-      " 44  genre_romance               5611 non-null   int64         \n",
-      " 45  genre_science fiction       5611 non-null   int64         \n",
-      " 46  genre_sport event           5611 non-null   int64         \n",
-      " 47  genre_thriller              5611 non-null   int64         \n",
-      " 48  genre_western               5611 non-null   int64         \n",
-      "dtypes: bool(1), datetime64[ns](1), float64(5), int64(34), object(8)\n",
+      " 20  stars_producers_director    5611 non-null   int64         \n",
+      " 21  distributor_avg_frequency   5611 non-null   float64       \n",
+      " 22  genre_action                5611 non-null   int64         \n",
+      " 23  genre_animation             5611 non-null   int64         \n",
+      " 24  genre_arts martiaux         5611 non-null   int64         \n",
+      " 25  genre_aventure              5611 non-null   int64         \n",
+      " 26  genre_biopic                5611 non-null   int64         \n",
+      " 27  genre_bollywood             5611 non-null   int64         \n",
+      " 28  genre_comédie               5611 non-null   int64         \n",
+      " 29  genre_comédie dramatique    5611 non-null   int64         \n",
+      " 30  genre_comédie musicale      5611 non-null   int64         \n",
+      " 31  genre_divers                5611 non-null   int64         \n",
+      " 32  genre_drame                 5611 non-null   int64         \n",
+      " 33  genre_epouvante-horreur     5611 non-null   int64         \n",
+      " 34  genre_erotique              5611 non-null   int64         \n",
+      " 35  genre_espionnage            5611 non-null   int64         \n",
+      " 36  genre_expérimental          5611 non-null   int64         \n",
+      " 37  genre_famille               5611 non-null   int64         \n",
+      " 38  genre_fantastique           5611 non-null   int64         \n",
+      " 39  genre_guerre                5611 non-null   int64         \n",
+      " 40  genre_historique            5611 non-null   int64         \n",
+      " 41  genre_judiciaire            5611 non-null   int64         \n",
+      " 42  genre_musical               5611 non-null   int64         \n",
+      " 43  genre_policier              5611 non-null   int64         \n",
+      " 44  genre_péplum                5611 non-null   int64         \n",
+      " 45  genre_romance               5611 non-null   int64         \n",
+      " 46  genre_science fiction       5611 non-null   int64         \n",
+      " 47  genre_sport event           5611 non-null   int64         \n",
+      " 48  genre_thriller              5611 non-null   int64         \n",
+      " 49  genre_western               5611 non-null   int64         \n",
+      "dtypes: bool(1), datetime64[ns](1), float64(5), int64(35), object(8)\n",
       "memory usage: 2.1+ MB\n"
      ]
     }
@@ -289,11 +292,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_model = df_cleaned[['duration','nationality','box_office_first_week','views','budget','season','is_holiday','proportion_stars_actors','proportion_stars_producers','proportion_stars_director','distributor_avg_frequency','genre_action', 'genre_animation', 'genre_arts martiaux',\n",
+    "df_model = df_cleaned[['duration','nationality','box_office_first_week','views','budget','season','stars_actors','stars_producers_director','distributor_avg_frequency','genre_action', 'genre_animation', 'genre_arts martiaux',\n",
     "       'genre_aventure', 'genre_biopic', 'genre_bollywood', 'genre_comédie',\n",
     "       'genre_comédie dramatique', 'genre_comédie musicale', 'genre_divers',\n",
     "       'genre_drame', 'genre_epouvante-horreur', 'genre_erotique',\n",
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
