--- a/popularity_corner/best_model/modelisation_sans_meteo_extratree.ipynb
+++ b/popularity_corner/best_model/modelisation_sans_meteo_extratree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X = df.drop(['box_office_first_week','is_holiday'],axis=1)\n",
+    "X = df.drop(['box_office_first_week'],axis=1)\n",
     "y = df['box_office_first_week']\n",
     "X_train,X_test, y_train,y_test = train_test_split(X,y, train_size=0.9,shuffle=True, random_state=42)"
    ]
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
     "import numpy as np\n",
     "\n",
     "# Définir les paramètres du préprocesseur\n",
-    "numerical_features = ['duration', 'views', 'budget','proportion_stars_actors', 'proportion_stars_producers', 'proportion_stars_director', 'distributor_avg_frequency']\n",
+    "numerical_features = ['duration', 'views', 'budget','stars_actors', 'stars_producers_director', 'distributor_avg_frequency']\n",
     "categorical_features = ['nationality', 'season']\n",
     "\n",
     "numerical_transformer = StandardScaler()\n",
@@ -327,16 +327,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7446695035824411"
+       "0.7367240943067084"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
