--- a/popularity_corner/best_model/modelisation_sans_meteo_extratree.ipynb
+++ b/popularity_corner/best_model/modelisation_sans_meteo_extratree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,17 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['duration', 'nationality', 'views', 'budget', 'season', 'is_holiday',\n",
-       "       'proportion_stars_actors', 'proportion_stars_producers',\n",
-       "       'proportion_stars_director', 'distributor_avg_frequency',\n",
-       "       'genre_action', 'genre_animation', 'genre_arts martiaux',\n",
-       "       'genre_aventure', 'genre_biopic', 'genre_bollywood', 'genre_comédie',\n",
+       "Index(['duration', 'nationality', 'views', 'budget', 'season', 'stars_actors',\n",
+       "       'stars_producers_director', 'distributor_avg_frequency', 'genre_action',\n",
+       "       'genre_animation', 'genre_arts martiaux', 'genre_aventure',\n",
+       "       'genre_biopic', 'genre_bollywood', 'genre_comédie',\n",
        "       'genre_comédie dramatique', 'genre_comédie musicale', 'genre_divers',\n",
        "       'genre_drame', 'genre_epouvante-horreur', 'genre_erotique',\n",
        "       'genre_espionnage', 'genre_expérimental', 'genre_famille',\n",
@@ -47,7 +46,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
