--- a/popularity_corner/best_model/feature_engineerin_sans_meteo2.ipynb
+++ b/popularity_corner/best_model/feature_engineerin_sans_meteo2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,9 +145,23 @@
     "\n",
     "# Étape 2 : Utiliser value_counts pour compter le nombre d'occurrences de chaque distributeur\n",
     "distributor_counts = df_exploded['distributor'].value_counts()\n",
-    "\n",
     "# Étape 3 : Calculer la fréquence des distributeurs \n",
     "distributor_frequency = distributor_counts\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Étape 3 : Créer le DataFrame avec les fréquences des distributeurs\n",
+    "df_distrib = pd.DataFrame({'distributor': distributor_counts.index, 'frequency': distributor_counts.values})\n",
+    "\n",
+    "# Renommer les colonnes du DataFrame\n",
+    "df_distrib.rename(columns={'Unnamed: 0': 'distributor', 0: 'frequency'}, inplace=True)\n",
+    "\n",
+    "# Sauvegarder le DataFrame dans un fichier CSV\n",
+    "df_distrib.to_csv('df_distrib.csv', index=False)\n",
+    "\n",
+    "\n",
     "\n",
     "# Étape 4 : Créer un dictionnaire pour mapper la fréquence à chaque distributeur\n",
     "distributor_freq_dict = distributor_frequency.to_dict()\n",
@@ -164,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +222,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,11 +323,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_model.to_csv('df_model_sans_meteo2.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_distrib.to_csv('/home/apprenant/DevIA/Popularity_corner/popularity_corner/best_model/df_distrib.csv')"
    ]
   }
  ],
